[package]
name = "async-postcard-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
postcard = { version = "1.0.0", features = ["use-std"] }
rand = "0.8.5"
serde = { version = "1.0.0", features = ["derive"] }
